--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -209,7 +209,7 @@
   doi = {10.3389/fpsyg.2022.734845},
   url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9333067/},
   abstract = {Negation is a topic that has received considerable attention ever since the early days of sign language linguistics; also, it is one of the grammatical domains that has given the impetus for sign language typology. In this paper, we offer a typological and theoretical contribution to the study of sign language negation. As for the typological side, we add Georgian Sign Language (GESL) to the pool of languages investigated. Our description reveals that GESL displays a number of typologically unusual features: a considerable number of negative particles, including emphatic, prohibitive, and tense-specific particles; specialized negative modals; and a wide range of possibilities for Negative Concord (NC) involving two manual negative signs, including a unique tense-specific instance of NC. Most of the patterns we report -- available negative particles, their clausal position, and NC possibilities -- are clearly different from those attested in spoken Georgian. As for the theoretical contribution, we investigate how the highly complex GESL negation system compares to existing taxonomies of NC and Double Negation systems, and we conclude that GESL aligns with certain languages that have been classified as atypical NC languages.},
-  note = {Special issue "Sign language research sixty years later: current and future perspectives"}
+  note = {Special issue "Sign language research sixty years later: current and future perspectives".}
 }
 
 @article{hartmann:21,
@@ -303,7 +303,7 @@
   url = {https://dspace.uba.uva.nl/server/api/core/bitstreams/0bb6b586-7133-49ad-b722-2cfc08555dcc/content},
   keywords = {bachelorsthesis},
   abstract = {This paper explores the implementation of a translator to sign language, using the JASigning avatarsoftware. Specifically, translation of Dutch into Sign Language of the Netherlands (NGT). As Dutch has been translated to a textual version of NGT in previous research, this research translated from textual NGT to synthesised NGT, the output signed by an avatar. This is one of three papers, each focusing on a different aspect of the translator: Lexical Resources, the Signing Space, and Multidimensionality. This paper pertains to the latter, and thus attempts to implement multiple dimensions into the avatar: the manual and non-manual component, which are both necessary to properly articulate a sign. The non-manual component of a sign being, for example, a facial expression, a head shake, the posture ofthe signer, etc. Specifically, it attempts to implement the non-manual markers paired with interrogative and negative constructs in NGT. Although the scope of this project is limited, it could provide a decent foundation for further research.},
-  note = {Bachelor's thesis, University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{Mende-Gillings:20,
@@ -313,7 +313,7 @@
   url = {https://dspace.uba.uva.nl/server/api/core/bitstreams/6d3b7a8d-3927-4032-8837-a91659a48a9d/content},
   keywords = {bachelorsthesis},
   abstract = {Hearing parents who have deaf children are often put in a difficult position. They most likely know no sign language and resources for learning are limited and expensive. Research into sign language translation and synthesis has increased in the past two decades, due to a growing interest into making public spaces and services more accessible to Deaf people.<br> This research looks at the potential of a translator from Dutch to Dutch sign language (NGT) using a sign language avatar. In particular the focus lies on the synthesis of directional verbs, a critical grammatical component of sign language. The implementation is very limited and therefore the sentences it produces are not always comprehensible and the signs do not always look natural. It does, however, also demonstrate the potential of a sign language avatar as a tool for learning sign language.},
-  note = {Bachelor's thesis, University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{Esselink:20,
@@ -323,7 +323,7 @@
   url = {https://dspace.uba.uva.nl/server/api/core/bitstreams/90908bfa-d553-42f9-a191-2f9249686a9c/content},
   keywords = {bachelorsthesis},
   abstract = {Deaf people oftentimes have no choice but to communicate in the lingua franca of their country, despite the fact that this is a second language for them. Their ability to read and write is significantly worse than that of a hearing person. Additionally, if a deaf child is born into a family of hearing parents, it is vital that the parents communicate with the child through sign language as soon as possible, otherwise the language region of that child's brain will be underdeveloped. There are currently few resources available for people to learn Sign Language of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it. <br> This thesis investigates what components are necessary to build a system that uses an avatar to translate a Dutch sentence to NGT. On the basis of the workings of NGT and previous research on the matter, three main components are devised and implemented: software for sign language synthesis, lexical resources for encoding signs, and grammatical resources for structuring sentences. Results show a proof of concept with a corpus of 2226 signs, the ability to make correct use of classifiers, and the abilities to fingerspell any word that is not in the corpus and convey numbers correctly. However, the corpus contains a number of errors and of which manual errors and unnatural mouth signs should particularly be improved. Moreover, further research is necessary to improve the comprehensibility of signs.},
-  note = {Bachelor's thesis, University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{Esselink:21,
@@ -351,7 +351,7 @@
   url = {https://dspace.uba.uva.nl/server/api/core/bitstreams/5f83a355-f4c2-4bd6-b263-885a9d6a6df6/content},
   keywords = {bachelorsthesis},
   abstract = {Deaf people can have a reading and writing delay due to the fact that the sign language of their country is their first language. Most hearing people do not understand sign language. This causes a language barrier to exist between deaf and hearing people. While tools like Google Translate support many languages, not a single sign language is included. This research reduces the language barrier between deaf and hearing people by developing a synthesis tool for sign language. This research focuses on evaluating different gaming and Virtual Reality avatar animation software to create signing avatars used for the synthesis tool. It also looks at converting motion capture data in to animations for the signing avatars. This conversion is implemented fully for one avatar. The resulting animation shows some unnatural movement but looks promising.},
-  note = {Bachelor's thesis, University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{Gennissen:22,
@@ -361,7 +361,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/a4d4666b-27aa-4a7f-99f8-e13621d2b91d/download},
   keywords = {bachelorsthesis},
   abstract = {This thesis explores the effect of mouth visualizations on modern avatars as support for speech comprehension. The mouth visualizations of the avatars were acquired by two state-of-the-art facial visualization methods in the field of deep learning and computer vision. An initial exploration was performed to inspect the possibilities and advantages of the two methods. Furthermore, the two methods were tested on their applicability to the Dutch language and the Dutch Sign Language (NGT). To analyze the effect of different kinds of avatars on speech comprehensibility, a survey experiment was conducted to gather information on the performance and opinions of participants.},
-  note = {Bachelor's thesis, University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{Atia:22,
@@ -371,7 +371,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/7a1dbcc9-2e6f-428f-8e13-ee65c504399e/download},
   keywords = {bachelorsthesis},
   abstract = {It is of great importance to make Dutch Sign Language (NGT) accessible to hearing people in order to improve the relationship between the deaf and hearing communities. We want to achieve this by creating an application that converts Dutch text to NGT performed by an avatar. To achieve this, an avatar must be created that is able to perform the different components of speaking sign language. In this research, the approach will be to let the avatar adapt motions performed by real live NGT speakers using a motion tracker. The results of previous research showed that gestures with specific finger positions, mainly when fingers overlap, were difficult to track. This research solves this problem by recording a NGT speaker from different views, and combining the results using a rigid body transformation. This way, the number of detected outliers are reduced significantly. The addition of cameras provides more insight into depth usage and estimation of the z-axis. It enables to detect bodyparts that are blocked from the main camera, which leads to more accurate tracking of gestures.},
-  note = {Bachelor's thesis, University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 
@@ -382,7 +382,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/fc79c65e-e35c-411e-bced-052a55ed8300/download},
   keywords = {bachelorsthesis},
   abstract = {This thesis explores the implementation for visualising the translation from Dutch sentences to the sign language of the Netherlands (NGT). This is one of three theses, each focusing on different parts of the avatar, which are eventually combined into one program. For this thesis, the goal is to implement a part of the non-manual side of NGT to create a proof of concept. The non-manual body parts of NGT include the head, face, shoulders and upper body. NGT is a complex language. Therefore it will take more time to completely visualize NGT using a new modern avatar, but this thesis provides a foundation for further research and implementation of the non-manual gestures of NGT.},
-  note = {Bachelor's thesis, University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{Vijver:21,
@@ -392,7 +392,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/128a1797-658b-49c2-8562-9cd1d3f81872/download},
   keywords = {bachelorsthesis},
   abstract = {For deaf people, the written and spoken language of their country is often their second language. The first language for most deaf people is the sign language of their country. Because deaf people often have a reading and writing delay and not many hearing people speak sign language, a barrier is formed between deaf people who speak sign language and hearing people who do not. To overcome this problem ’signing avatars’ have been researched in the past decade: 3D computer models that can perform sign language. For the Dutch sign language and many other sign languages, the animation techniques that are used for this are deprecated. This research is focused on using modern techniques for animating these signing avatars. A model was built that shows potential in using these modern techniques to perform signs that are described in a dedicated markup language.},
-  note = {Bachelor's thesis, University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 
@@ -403,7 +403,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/473c469e-4102-4133-9e53-e377263d5782/download},
   keywords = {bachelorsthesis},
   abstract = {Loss of hearing at young age has devastating effects on the development of a child. One of these effects is a learning deficit. This learning deficit can be strongly mitigated by introducing sign language as soon as deafness is diagnosed. However, most of deaf children are born to hearing parents who can not speak the Dutch Sign Language (NGT). Language acquisition of NGT is difficult for Dutch speaking people, since NGT has its own grammar and vocabulary. The main purpose of this thesis is to find out if modern avatar simulation techniques can be used to create a virtual sign language avatar to aid the learning process of NGT. Results show that modern software is applicable, but three main components are needed by the software in order to do so. A phonetic representation of the sign, a compatible rig with as many control points as needed by the phonetic representation and animation software to alter the orientation/position of the control points.},
-  note = {Bachelor's thesis, University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 
@@ -414,7 +414,7 @@
   url = {https://www.signlab-amsterdam.nl/publications/Bleijlevens-2020.pdf},
   keywords = {bachelorsthesis},
   abstract = {This project studies the possibilities of designing an online platform for acquiring Dutch Sign Language (NGT), specifically focused on parents of deaf children. Children need a lot of (diverse) language input to lay a groundwork for their language development and it is thus important that people in their surroundings speak a language the child can interpret. Over the past decades, a lot of different distance learning technology have been developed for second language acquisition. This research will look into NGT and discuss all the grammatical topics which should be explained to people wanting to learn the language. Then, different technologies and will analyse which would suit learning NGT the best. Lastly, the two research topics will be combined and a design for a platform is proposed.},
-  note = {Bachelor's thesis, Amsterdam University College}
+  note = {Bachelor's thesis, Amsterdam University College.}
 }
 
 @article{sumer:20,
@@ -504,14 +504,14 @@
   abstract = {Prior work with hearing children acquiring a spoken language as their first language shows that spatial language and cognition are related systems and spatial language use predicts spatial memory. Here, we further investigate the extent of this relationship in signing deaf children and adults and ask if late sign language exposure, as well as the frequency and the type of spatial language use that might be affected by late exposure, modulate subsequent memory for spatial relations. To do so, we compared spatial language and memory of 8-year-old late-signing children (after 2 years of exposure to a sign language at the school for the deaf) and late-signing adults to their native-signing counterparts. We elicited picture descriptions of Left-Right relations in Turkish Sign Language (Türk İşaret Dili) and measured the subsequent recognition memory accuracy of the described pictures. Results showed that late-signing adults and children were similar to their native-signing counterparts in how often they encoded the spatial relation. However, late-signing adults but not children differed from their native-signing counterparts in the type of spatial language they used. However, neither late sign language exposure nor the frequency and type of spatial language use modulated spatial memory accuracy. Therefore, even though late language exposure seems to influence the type of spatial language use, this does not predict subsequent memory for spatial relations. We discuss the implications of these findings based on the theories concerning the correspondence between spatial language and cognition as related or rather independent systems.}
 }
 
-@unpublished{esselink:nd,
+@unpublished{esselink:22,
   author = {Esselink, Lyke and Roelofsen, Floris and Dotla{\v{c}}il, Jakub and Mende-Gillings, Shani and Meulder, Maartje de and Sijm, Nienke and Smeijers, Anika},
   title = {Exploring automatic text-to-sign translation in a healthcare setting},
-  year = {N.D.},
+  year = {2022},
   keywords = {manuscript},
   url = {https://www.signlab-amsterdam.nl/publications/Esselink22.pdf},
   abstract = {Communication between healthcare professionals and deaf patients has been particularly challenging during the COVID-19 pandemic. We have explored the possibility to automatically translate phrases that are frequently used in the diagnosis and treatment of hospital patients, in particular phrases related to COVID-19, from Dutch or English to Dutch Sign Language (NGT). The prototype system we developed displays translations either by means of pre-recorded videos featuring a deaf human signer (for a limited number of sentences) or by means of animations featuring a computer-generated signing avatar (for a larger, though still restricted number of sentences). We evaluated the comprehensibility of the signing avatar, as compared to the human signer. We found that, while individual signs are recognized correctly when signed by the avatar almost as frequently as when signed by a human, sentence comprehension rates and clarity scores for the avatar are substantially lower than for the human signer. We identify a number of concrete limitations of the JAsigning avatar engine that underlies our system. Namely, the engine currently does not offer sufficient control over mouth shapes, the relative speed and intensity of signs in a sentence (prosody), and transitions between signs. These limitations need to be overcome in future work for the engine to become usable in practice.},
-  note = {Unpublished}
+  note = {Unpublished.}
 }
 
 @article{motamedi:22,
