--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -656,3 +656,13 @@
   url = {https://www.linguisticsociety.org/sites/default/files/08_96.3Culbertson.pdf},
   abstract = {The world’s languages exhibit striking diversity. At the same time, recurring linguistic patterns suggest the possibility that this diversity is shaped by features of human cognition. One well-studied example is word order in complex noun phrases (like these two red vases). While many orders of these elements are possible, a subset appear to be preferred. It has been argued that this ordering reflects a single underlying representation of noun phrase structure, from which preferred orders are straightforwardly derived (e.g. Cinque 2005). Building on previous experimental evidence using artificial language learning (Culbertson & Adger 2014), we show that these preferred orders arise not only in existing languages, but also in improvised sequences of gestures produced by English speakers. We then use corpus data from a wide range of languages to argue that the hypothesized underlying structure of the noun phrase might be learnable from statistical features relating objects and their properties conceptually. Using an information-theoretic measure of strength of association, we find that adjectival properties (e.g. red) are on average more closely related to the objects they modify (e.g. wine) than numerosities are (e.g. two), which are in turn more closely related to the objects they modify than demonstratives are (e.g. this). It is exactly those orders which transparently reflect this—by placing adjectives closest to the noun, and demonstratives farthest away—that are more common across languages and preferred in our silent gesture experiments. These results suggest that our experience with objects in the world, combined with a preference for transparent mappings from conceptual structure to linear order, can explain constraints on noun phrase order.}
 }
+
+@article{veigabusto:22,
+title = {Person and number in Catalan Sign Language pronouns},
+author = {Veiga Busto, Raquel},
+journal = {Sign Language and Linguistics},
+year = {2022},
+doi = {10.1075/sll.00069.vei},
+abstract = {The category of person encodes the semantic distinction between discourse roles, and number specifies the numerosity of the referents. While these are two basic grammatical categories of human languages, they have not yet been documented in detail in many sign languages. This dissertation provides the first in-depth analysis of person and number in Catalan Sign Language (LSC) pronouns. To a lesser extent, the form and interpretation of number in nouns is also addressed. The dissertation takes a descriptive approach, but it also offers formal arguments to account for the interpretation of person and number markers. Besides, the results are contrasted with prior findings from signed and spoken languages to determine whether LSC complies with the tendencies documented in the two cat- egories across the world’s languages.
+Drawing on a combination of elicited and corpus data analysis, this study shows that person and number in LSC are formally marked through a set of dis- tinctive phonological features: person is encoded through spatial features, and number by the path specifications of the sign. Further, this thesis demonstrates that person marking has an influence on the meaning of certain number mor- phemes. Thus, the same morphological operation might yield different interpre- tations depending on the person features with which it is combined.}
+}
